# qrouter

./: CMakeLists.txt  CMakeSettings.json  QRouter.sln  QRouter.vcxproj  QRouter.vcxproj.filters  README.md
include/: abstractroutercontainer.h  abstractrouterwidget.h  qrouter.h  qrouterexception.h  qrouterpageevent.h  routerstackmanager.h
include/container/: layoutroutercontainer.h  stackroutercontainer.h
src/: CMakeLists.txt  QRouterConfig.cmake.in  abstractrouterwidget.cpp  abstractrouterwidget.h  implclass.h  qrouter.cpp  qrouter.h  routerstackmanager.cpp
src/container/: layoutroutercontainer.cpp  stackroutercontainer.cpp
test/: CMakeLists.txt  main.cpp  qrouter.cpp  qrouter.h  qrouter.qrc  qrouter.ui  qroutertest.cpp  qroutertest.h
test/pages/: customdata.h  page1.ui  page2.ui  testpage1.cpp  testpage1.h  testpage2.cpp  testpage2.h
